hphp/hack/test/typecheck/reactive/test_mutable_return11.php.exp
File "test_mutable_return11.php", line 10, characters 19-19:
Member f has the wrong type (Typing[4341])
File "test_mutable_return11.php", line 5, characters 19-19:
This is marked <<__MutableReturn>>.
File "test_mutable_return11.php", line 10, characters 19-19:
This is not marked <<__MutableReturn>>.
